// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useResource() should dispatch an action that fetches 1`] = `
Object {
  "meta": Object {
    "key": "GET http://test.com/article-cooler/5",
    "options": undefined,
    "promise": Promise {},
    "reject": [Function],
    "resolve": [Function],
    "schema": [Function],
    "throttle": true,
    "type": "read",
  },
  "payload": [Function],
  "type": "rest-hooks/fetch",
}
`;

exports[`useResource() should dispatch fetch when sent multiple arguments 1`] = `
Object {
  "meta": Object {
    "key": "GET http://test.com/article-cooler/5",
    "options": undefined,
    "promise": Promise {},
    "reject": [Function],
    "resolve": [Function],
    "schema": [Function],
    "throttle": true,
    "type": "read",
  },
  "payload": [Function],
  "type": "rest-hooks/fetch",
}
`;

exports[`useResource() should dispatch fetch when sent multiple arguments 2`] = `
Object {
  "meta": Object {
    "key": "GET http://test.com/user/",
    "options": undefined,
    "promise": Promise {},
    "reject": [Function],
    "resolve": [Function],
    "schema": Array [
      [Function],
    ],
    "throttle": true,
    "type": "read",
  },
  "payload": [Function],
  "type": "rest-hooks/fetch",
}
`;
